# politifact-scraping

./: README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: logging.py  mongodb.py  scraping.py  utils.py
src/politifact_scraping/: __init__.py  logging_config.py  mongodb.py  scraping.py  utils.py
