[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "politifact-scraping"
version = "0.1.0"
description = "Scrape content from the PolitiFact website"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.10"
authors = [
    { name = "villarmario" },
]
keywords = ["politifact", "scraping", "fact-checking", "web-scraping", "dataset"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.28",
    "fuzzywuzzy>=0.18",
    "python-Levenshtein>=0.21",
    "pymongo>=4.0",
    "python-dotenv>=1.0",
    "numpy>=1.24",
    "pydantic-core>=2.0"
]

[project.urls]
Homepage = "https://github.com/villarmario/politifact-scraping"
Repository = "https://github.com/villarmario/politifact-scraping"
Issues = "https://github.com/villarmario/politifact-scraping/issues"

[tool.setuptools.packages.find]
where = ["src"]
